Update ScoreTable to be scrollable by itself - Wrap in ".table-responsive" - Finetune:     - Apply ".w-auto" to prevent width-stretching     - Remove bottom margin

--- a/src/ScoreTable.style.css
+++ b/src/ScoreTable.style.css
@@ -20,3 +20,8 @@ td:first-child {
   cursor: pointer;
 }
 
+/* --- Bootstrap Extensions ---*/
+
+.table-responsive {
+  max-height: 100vh;
+}
